javascript is my best friend

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="UTF-8" />
 <title>Amandina</title>
-<link rel="icon" type="image/jpg" href="8587871.jpg" />
-<link rel="stylesheet" type="text/css" href="style.css" />
+<link rel="icon" type="image/jpg" href="images/8587871.jpg" />
+<link rel="stylesheet" type="text/css" href="css/styles.css" />
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 
@@ -15,7 +15,8 @@
 
     <div id="myDIV" class="header">
       <h2>My todo app</h2>
-      <img src="8587871.jpg" alt="" width="200px" height="150px">
+      <br>
+      <img src="images/8587871.jpg" alt="" width="200px" height="150px">
       <br><br>
       <input type="text" id="myInput" placeholder="Wat moet ik doen ?">
       <span onclick="newElement()" class="addBtn">Add</span>
@@ -30,7 +31,6 @@
       <li>Meet Maxim</li>
     </ul>
 
-<script type = "text/javascript" src "todo.js"></script>
 <script type = "text/javascript" src="script.js"></script>
 </body>
 </html>
